fixed overflowing layout, updated all sections to use section wrapper.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,40 +1,43 @@
+  html {
+    overflow-x: hidden;
+  }
+
   body {
-    margin: 0 auto;
-    width: 100%;
+    margin: 0;
     overflow-x: hidden;
     background-color: white;
 
-    }
-  
+  }
+
   * {
     box-sizing: border-box;
   }
 
-:root {
-  --primary-font: 'Work Sans', sans-serif;
-  --secondary-font: Montserrat, sans-serif;
-}
+  :root {
+    --primary-font: 'Work Sans', sans-serif;
+    --secondary-font: "Montserrat", sans-serif;
+  }
 
-hr {
-  width: 100%;
-  border: none;
-  height: 1px;
-  background-color: lightgrey;
-}
+  hr {
+    width: 100%;
+    border: none;
+    height: 1px;
+    background-color: lightgrey;
+  }
 
-/* Typography */
-h1 {
-  font-size: 5rem;
-  font-family: var(--primary-font);
-  font-weight: 600;
-}
+  /* Typography */
+  h1 {
+    font-size: 5rem;
+    font-family: var(--primary-font);
+    font-weight: 600;
+  }
 
-h2 {
-  font-family: var(--primary-font);
-  font-size: 3.75rem;
-  font-weight: 800;
-  color: #3D3D40;
-}
+  h2 {
+    font-family: var(--primary-font);
+    font-size: 3.75rem;
+    font-weight: 800;
+    color: #3D3D40;
+  }
 
   h3 {
     font-family: var(--primary-font);
@@ -51,7 +54,7 @@ h2 {
   }
 
   p {
-    font-family: 'Montserrat', sans-serif;;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.5rem;
     font-weight: 400;
     line-height: 2.5rem;
@@ -59,19 +62,28 @@ h2 {
 
   a {
     color: #3D3D40;
-   font-family: var(--primary-font);
+    font-family: var(--primary-font);
     font-weight: 500;
     font-size: 1rem;
     text-decoration: none;
   }
 
-  
-/* Media Queries */
+  .hamburger {
+    display: none;
+  }
 
-  @media screen and (min-width: 768px) {
+  /* Media Queries */
+
+  @media screen and (max-width: 768px) {
+    h1 {
+      font-size: 3rem;
+      font-family: var(--primary-font);
+      font-weight: 600;
+    }
 
     .hamburger {
-        display: none;
-      }
+      display: block;
+    }
+
 
   }
